--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/e3a7fc4cde.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="src/nav.css">
+    <link rel="stylesheet" href="src/menu.css">
     <script type="module" src="src/main.js"></script>
     <script type="module" src="src/nav.js"></script>
+    <script src="src/menu.js"></script>
     <title>Document</title>
 </head>
 <body>
@@ -18,5 +20,20 @@
       <ul class="navBtns"></ul>
     </div>    
   </nav>
+
+  <!--상품리스트-->
+  <section>
+    <div class="menu">      
+      <ul class="menuList">      
+      </ul>      
+
+      <div class="btn">
+        <button><span>1</span></button>
+        <button><span>2</span></button>
+        <button><span>3</span></button>
+      </div>
+      
+    </div>
+  </section>
 </body>
 </html>
