버튼기능추가

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="src/menu.css">
     <script type="module" src="src/main.js"></script>
     <script type="module" src="src/nav.js"></script>
-    <script src="src/menu.js"></script>
+    <script type="module" src="src/menu.js"></script>
     <title>Document</title>
 </head>
 <body>
@@ -24,15 +24,8 @@
   <!--상품리스트-->
   <section>
     <div class="menu">      
-      <ul class="menuList">      
-      </ul>      
-
-      <div class="btn">
-        <button><span>1</span></button>
-        <button><span>2</span></button>
-        <button><span>3</span></button>
-      </div>
-      
+      <ul class="menuList"></ul>  
+      <div class="btn"></div>      
     </div>
   </section>
 </body>
