로그인 회원가입 페이지 추가 + 기능

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="https://kit.fontawesome.com/e3a7fc4cde.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="src/nav.css">
     <link rel="stylesheet" href="src/menu.css">
+    <link rel="stylesheet" href="src/footer.css">
     <script type="module" src="src/main.js"></script>
     <script type="module" src="src/nav.js"></script>
     <script type="module" src="src/menu.js"></script>
@@ -28,5 +29,32 @@
       <div class="btn"></div>      
     </div>
   </section>
+
+  <!--footer-->
+  <footer>
+    <div class="footer">
+      <ul class="information">
+        <li class="title"> <h4>HELP & INFORMATION</h4></li>
+        <li>Your Order</li>
+        <li>Home</li>
+        <li>FAQs</li>
+      </ul>
+      <ul class="company">
+        <li class="title"><h4>COMPANY</h4></li>
+        <li>About U</li>
+        <li>Careers</li>
+        <li>Blog</li>
+      </ul>
+      <ul class="support">
+        <li class="title"><h4>SUPPORT</h4></li>
+        <li>Email Support</li>
+        <li>Help center</li>
+        <li>Features</li>
+      </ul>
+      
+
+
+    </div>
+  </footer>
 </body>
 </html>
